2013-01-30  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/make-release.sh:
	gave access to check_pending_modifications

	* data/                *** ADDED ***
	added common event files for make check purpose

	* configure:           *** ADDED ***
	* Makefile.in:         *** ADDED ***
	added basic building mechanism

	* scripts/update-contribs.sh:
	allowed to run it with a contrib name and optional version
	This is then equivalent to calling switch-to-version.sh

	* scripts/update-contribs.sh:
	added "Template" to the list of ignored directories

	* scripts/*            *** ADDED ***
	* README               *** ADDED ***
	added a list of maintenance scripts (see README for details)

	* contribs.svn         *** ADDED ***
	added an (empty) list of supported contribs
