@@ -1,5 +1,10 @@
 2013-01-30  Gregory Soyez  <soyez@fastjet.fr>
 
+	* scripts/switch-to-version.sh:
+	  - use svn switch --relocate since svn relocate is not available
+	    with old svn version
+	  - give a write access when checking out the trunk
+
 	* scripts/make-release.sh:
 	gave access to check_pending_modifications
 
